apply plugin: 'com.android.application'

// Protect the signing config by storing it in a private file. Ensure that signing.properties exists
// in the parent directory.
if (project.hasProperty("PublicAccessSites.properties") && new File(project.property("PublicAccessSites.properties")).exists()) {
	Properties props = new Properties()
	props.load(new FileInputStream(file("../" + project.property("PublicAccessSites.properties"))))

	android {
		signingConfigs {
			release {
                keyAlias props['key.alias']
                keyPassword props['key.password']
                storeFile file('../' + props['store.file'])
                storePassword props['store.password']
			}
		}
	}
}

android {
	compileSdkVersion 29
	buildToolsVersion '29.0.0'
	defaultConfig {
		minSdkVersion 28
		targetSdkVersion 29
		versionCode 8
		versionName "1.7"
	}
	compileOptions {
		sourceCompatibility JavaVersion.VERSION_1_8
		targetCompatibility JavaVersion.VERSION_1_8
	}
	buildTypes {
		release {
			minifyEnabled false
			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
            signingConfig signingConfigs.release
		}
	}
	packagingOptions {
		exclude 'META-INF/DEPENDENCIES'
	}
}

dependencies {
	implementation 'androidx.appcompat:appcompat:1.1.0'
	implementation 'com.google.android.gms:play-services-maps:17.0.0'
	implementation 'commons-net:commons-net:3.3'
	implementation 'org.jsoup:jsoup:1.7.2'
	implementation 'org.nocrala:shapefile-reader:1.0'
	implementation 'org.apache.httpcomponents:httpclient:4.5.10'
}
